# package-template

./: .gitignore  README.md  cookiecutter.json  tox.ini
.github/workflows/: lint-test.yaml
hooks/: post_gen_project.py
tests/: test_microservice.py  test_package.py  test_template.py
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.rst  docker-compose.yml  microservice-tox.ini  package-tox.ini  setup.cfg  setup.py  sonar-project.properties  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: container-publish.yaml  lint-test.yaml  package-publish.yaml  pipeline-microservice.yml  pipeline-package.yml  pr-labeler.yaml  release-management.yaml  test-build.yaml
{{cookiecutter.project_slug}}/docs/source/: changelog.rst  conf.py  development.rst  index.rst  usage.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.package}}/: __init__.py  core.py  server.py
{{cookiecutter.project_slug}}/tests/unit/: test_placeholder.py
